[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Lucas Möller <lucas.moeller-extern@deutschebahn.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
